Revision history for Perl extension WWW::Mechanize

NEXT
        [BUG FIXES] 
        * The behavior of clone() now copies over the cookie jar,
          which is probably what you expected it did in the first place.  This
          fixes bug RT#13541 filed against Test::WWW::Mechanize, which was using
          clone() internally. (Mark Stosberg)

        * The correct URL is returned after redirecting. This a regression from 1.04
          and was reported as RT#9059, RT#12882, and RT#12786.  The documentation 
          about this has also been clarified that we return A URI object, but that
          it stringifies to the URI itself. 

        [DOCUMENTATION]
        * Fixed a misleading parm in the constructor.
        * Document the return value of set_visible (RT#6071, MJD, Mark Stosberg)
        * Document that form_name and form_number return an HTML::Form object (Mark Stosberg)

        [INTERNALS]
        * Made lots of little cleanups based on Perl::Critic
        * Fix Taint-mode warnings with Perl 5.6.1 (RT#16945)

1.18    Thu Feb  2 00:11:26 CST 2006
        [TESTS]
        * Makefile.PL now takes four new parms:
            * --live/nolive turns on/off the live tests
            * --local/nolocal turns on/off the local tests
            * --mech-dump/nomech-dump installs/doesn't the mech-dump program
            * --all turns on all tests and installs mech-dump

        * Fixed some failures in tests.  Non-existent URLs now have a
          "." postpended to them, so if someone's got a search domain
          with a wildcard (i.e. ignore.us) it'll ignore that.  Also,
          Google's second link is now a https:// link, which some Mechs
          can't handle.  Added a 'url_regex' which now makes it look at
          the second non-https link.  Thanks to Pete Krawczyk.

1.16    Fri Oct 28 17:34:20 CDT 2005
        [ENHANCEMENTS]
        * Sped up Mech significantly (~20% in some cases).  Images and