@@ -1,0 +1,16 @@
+<html>
+<body>
+
+<form action="http://localhost/" method="post" enctype="multipart/form-data" name="1st_form">
+    <input type="text" name="1a"  />
+    <input type="text" name="1b"  />
+    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+</form>
+
+<form action="http://localhost/" method="post" name="2nd_form">
+    <input type="text" name="2a"  />
+    <input type="text" name="1b"  />
+    <input type="Submit" name="submit" value="Submit" label="Sumbit" />
+</form>
+
+</body>
