@@ -1,6 +1,16 @@
 Revision history for Perl extension WWW::Mechanize
 
 NEXT
+        [ENHANCEMENTS]
+        * Add new Do-What-I-Mean submit_form() option. 
+            $mech->submit_form(
+                form_with_fields => 1 
+                fields => \%data 
+            );
+         That expresses that you want to select the first form contains
+         all fields in \%data. See the docs for form_with_fields() and
+         submit_form() for details. (Mark Stosberg, inspired by RT#6100)
+
         [BUG FIXES] 
         * The behavior of clone() now copies over the cookie jar,
           which is probably what you expected it did in the first place.  This
